Refactor Create One Game and Find Leaders Services